# pain

./: .gitignore  .gitmodules  CHANGELOG.md  Cargo.toml  README.md  RELEASE_NOTES_v0.2.0.md  TASKS.MD  stdlib.md
.github/workflows/: ci.yml  release.yml
.pain_dev_docs/archive/: TASKS_2025-11.md
benches/: README.md  compare.py  factorial.rs  fibonacci.rs  sum.rs
benches/cpp/: Makefile  factorial.cpp  fibonacci.cpp  sum.cpp
benches/pain/: factorial.pain  factorial_tail.pain  fibonacci.pain  sum.pain
benches/python/: factorial.py  fibonacci.py  sum.py
benches/rust/: Cargo.toml  factorial.rs  fibonacci.rs  sum.rs
docs/: DEVELOPMENT.md  JIT_SETUP.md  PGO.md  PML_SPEC.md  README.md  REGISTRY.md  REGISTRY_SETUP.md  examples.md  examples_pml.md  quickstart.md  stdlib.md
pain-vscode/: CHANGELOG.md  README.md  package-lock.json  package.json
pain-vscode/src/: extension.ts
pain-vscode/syntaxes/: pain.tmLanguage.json
utils/: README.md  convert_icons.py
