[workspace]
members = [
    "pain-compiler",
    "pain-lsp",
    "pain-runtime",
    "painpkg",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Pain Team"]
license = "MIT OR Apache-2.0"

[workspace.dependencies]
# Parser dependencies
logos = "0.14"
lalrpop = "0.20"
lalrpop-util = "0.20"

# LLVM backend (optional, requires LLVM installation)
# inkwell = { version = "0.4", default-features = false, features = ["llvm11-0"] }

# LSP
tower-lsp = "0.20"

# Python bridge (for future use)
# pyo3 = { version = "0.20", features = ["auto-initialize"] }

# Utilities
thiserror = "1.0"
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }

