[workspace]
members = [
    "pain-compiler",
    "pain-lsp",
    "pain-runtime",
    "painpkg",
]
resolver = "2"

[workspace.package]
version = "0.2.0"
edition = "2021"
authors = ["Pain Team"]
license = "MIT OR Apache-2.0"

[workspace.dependencies]
# Parser dependencies
logos = "0.14"
lalrpop = "0.20"
lalrpop-util = "0.20"

# LLVM backend (optional, requires LLVM installation)
# For LLVM 21, we use llvm-sys directly (inkwell only supports up to LLVM 18)
llvm-sys = "211"

# LSP
tower-lsp = "0.20"
tokio = { version = "1.0", features = ["full"] }

# Python bridge (for future use)
# pyo3 = { version = "0.20", features = ["auto-initialize"] }

# Utilities
thiserror = "1.0"
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
rustyline = "14.0"

# Benchmarks
criterion = { version = "0.5", features = ["html_reports"] }
